--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,15 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.1.1</version>
+			</dependency>
+	
+		<!-- Commons Pool -->
+		<dependency>
+			<groupId>commons-pool</groupId>
+			<artifactId>commons-pool</artifactId>
+			<version>1.6</version>
 		</dependency>
-
+	
 		<!-- MySQL connector -->
 		<dependency>
 			<groupId>mysql</groupId>
